Trying to fix that spacing around the sidebar.  Added a rule to fix it.

--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,7 @@ section.module.parallax-1 {
   position: fixed;
   top: 0;
   left: -30%;
-  height: 30%;
+  height: auto;
   width: 25%;
   background-color: #383332;
   margin:  auto;
